--- a/wiki/index.html
+++ b/wiki/index.html
@@ -155,8 +155,6 @@ Error message and password prompt
 
 <li>$:/_sq/Stories/divertTiddlerMacro</li>
 
-<li>$:/_sq/Stories/Story2HistoryList</li>
-
 <li>$:/_sq/Stories/Story2StoryList</li>
 
 <li>$:/.giffmex/.Stylesheet4Stroll</li>
@@ -1485,400 +1483,6 @@ Error message and password prompt
 
 
 </pre>
-</div>
-<div created="20200425131030296" current-tiddler="Calico for Eru" modified="20200713070947436" title="$:/_sq/Stories/Story2HistoryList" type="application/json">
-<pre>[
-    {
-        &quot;title&quot;: &quot;$:/config/Tiddlers/TitleLinks&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 249.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 183.515625,
-            &quot;right&quot;: 1413.515625,
-            &quot;bottom&quot;: 269.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 623.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 220.390625,
-            &quot;right&quot;: 1450.390625,
-            &quot;bottom&quot;: 643.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 319.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 245.53125,
-            &quot;right&quot;: 1475.53125,
-            &quot;bottom&quot;: 339.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 537.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 283.546875,
-            &quot;right&quot;: 1513.546875,
-            &quot;bottom&quot;: 557.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 297.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 326.734375,
-            &quot;right&quot;: 1556.734375,
-            &quot;bottom&quot;: 317.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/core/ui/SideBar/Open&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 337.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 161.8125,
-            &quot;right&quot;: 1391.8125,
-            &quot;bottom&quot;: 357.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/core/ui/SideBar/Open'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/core/ui/SideBar/Open&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;TiddlyBlink&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 1035.921875,
-            &quot;left&quot;: 1190,
-            &quot;width&quot;: 101.6875,
-            &quot;right&quot;: 1291.6875,
-            &quot;bottom&quot;: 1054.921875,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/.giffmex/Customize.TiddlyBlink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 735.625,
-            &quot;left&quot;: 107.5,
-            &quot;width&quot;: 145.171875,
-            &quot;right&quot;: 252.671875,
-            &quot;bottom&quot;: 755.625,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/.giffmex/meta/hack.tiddlyblink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 757.625,
-            &quot;left&quot;: 107.5,
-            &quot;width&quot;: 129.59375,
-            &quot;right&quot;: 237.09375,
-            &quot;bottom&quot;: 777.625,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;TiddlyBlink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 161.296875,
-            &quot;left&quot;: 221.953125,
-            &quot;width&quot;: 71.859375,
-            &quot;right&quot;: 293.8125,
-            &quot;bottom&quot;: 181.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;TiddlyBlink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 161.296875,
-            &quot;left&quot;: 221.953125,
-            &quot;width&quot;: 71.859375,
-            &quot;right&quot;: 293.8125,
-            &quot;bottom&quot;: 181.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;,
-        &quot;fromPageRect&quot;: {}
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories-overview'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories-overview'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 481.34375,
-            &quot;left&quot;: 2259,
-            &quot;width&quot;: 80.890625,
-            &quot;right&quot;: 2339.890625,
-            &quot;bottom&quot;: 500.34375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Plugin maker'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 296.84375,
-            &quot;left&quot;: 2259,
-            &quot;width&quot;: 41.453125,
-            &quot;right&quot;: 2300.453125,
-            &quot;bottom&quot;: 315.84375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 501.34375,
-            &quot;left&quot;: 2259,
-            &quot;width&quot;: 80.890625,
-            &quot;right&quot;: 2339.890625,
-            &quot;bottom&quot;: 520.34375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Plugin maker'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 360.171875,
-            &quot;left&quot;: 1245,
-            &quot;width&quot;: 182.21875,
-            &quot;right&quot;: 1427.21875,
-            &quot;bottom&quot;: 379.171875,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/config/Settings'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 360.171875,
-            &quot;left&quot;: 1245,
-            &quot;width&quot;: 182.21875,
-            &quot;right&quot;: 1427.21875,
-            &quot;bottom&quot;: 379.171875,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/config/Settings'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/plugins/sq/Stories&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 463.734375,
-            &quot;left&quot;: 2321.1875,
-            &quot;width&quot;: 476.734375,
-            &quot;right&quot;: 2797.921875,
-            &quot;bottom&quot;: 482.734375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;calicao subnet not match the CIDR of a configured Calico IP Pool&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 414.546875,
-            &quot;left&quot;: 43,
-            &quot;width&quot;: 452.5625,
-            &quot;right&quot;: 495.5625,
-            &quot;bottom&quot;: 432.546875,
-            &quot;height&quot;: 18
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Calico for Eru&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 477.546875,
-            &quot;left&quot;: 43,
-            &quot;width&quot;: 94.15625,
-            &quot;right&quot;: 137.15625,
-            &quot;bottom&quot;: 495.546875,
-            &quot;height&quot;: 18
-        }
-    }
-]</pre>
 </div>
 <div bag="default" created="20170615140314952" list="" modified="20200704092925368" revision="8" tags="$:/giffmex/stroll" title="$:/_sq/Stories/Story2StoryList" type="text/vnd.tiddlywiki">
 <pre></pre>
@@ -18314,8 +17918,8 @@ exports.context = contextWidget;
 <div created="20200619183736594" modified="20200628155755249" title="$:/state/tab--697582678">
 <pre>$:/core/ui/ControlPanel/Settings/CodeMirror</pre>
 </div>
-<div created="20200429214732957" modified="20200624162232241" title="$:/state/tab--86143343">
-<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
+<div created="20200429214732957" modified="20200713100938182" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
 <div created="20200619183706276" modified="20200628155807287" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
@@ -18558,12 +18162,12 @@ exports.context = contextWidget;
 <pre>no</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
-<pre>yes</pre>
+<pre>no</pre>
 </div>
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200713065851109" list="$:/ControlPanel Calico [[Calico for Eru]] [[Eru CopyFileToContainer 偶尔会失败]] UsefulWebsites [[file descriptor]] Bash [[Positive lookbehind]] TableOfContents" modified="20200713100923583" title="$:/StoryList">
+<div created="20200713100933722" list="Calico [[Calico for Eru]]" modified="20200713163212376" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19612,8 +19216,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200712141513919" title="$:/temp/search">
-<pre>Regular Expression</pre>
+<div created="20200418122544376" modified="20200713100932898" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -19895,8 +19499,7 @@ Bash 不支持(...)	[[Capturing group]]，所以需要使用[[Positive lookbehin
 &gt; &amp;&gt;name is like 1&gt;name 2&gt;name -- redirect stdout and stderr to the file name (however name is only opened once; if you actually wrote 1&gt;name 2&gt;name it'd try to open name twice and perhaps malfunction).</pre>
 </div>
 <div created="20200707105710809" modified="20200707105740456" tags="NetworkProtocol" title="BGP(Border Gateway Protocol)">
-<pre>
-Border Gateway Protocol (BGP) is a standardized exterior gateway [[NetworkProtocol]] designed to exchange routing and reachability information among autonomous systems (AS) on the Internet.</pre>
+<pre>Border Gateway Protocol (BGP) is a standardized exterior gateway [[NetworkProtocol]] designed to exchange routing and reachability information among autonomous systems (AS) on the Internet.</pre>
 </div>
 <div created="20200621042543890" modified="20200625045159090" tags="ci Computing Quote" title="Books From Zhihu" type="text/x-markdown">
 <pre>有教[[抽象]]能力的书么？
@@ -19928,17 +19531,21 @@ True
 <div created="20200622110429774" modified="20200622110429774" title="calico">
 <pre></pre>
 </div>
-<div created="20200707095356176" modified="20200707101806472" tags="NetworkVirtualization" title="Calico">
+<div created="20200707095356176" modified="20200713163300587" tags="NetworkVirtualization" title="Calico">
 <pre>[[NetworkVirtualization]]
 
 &lt;div class=&quot;box&quot;&gt;
-&quot;&quot;&quot;
+
 
 
 Calico is an open source networking and network security solution for containers, virtual machines, and native host-based workloads. Calico supports a broad range of platforms including Kubernetes, OpenShift, Docker EE, OpenStack, and bare metal services.
 
+&lt;&lt;&lt;.tc-big-quote
 
-&quot;&quot;&quot;
+Project Calico attempts to solve the speed and efficiency problems that using virtual LANs, bridging, and tunneling can cause. It achieves this by connecting your containers to a vRouter, which then routes traffic directly over the L3 network. This can give huge advantages when you are sending data between multiple data centers as there is no reliance on NAT and the smaller packet sizes reduce CPU utilization.
+
+&lt;&lt;&lt;
+
 &lt;/div&gt;
 
 [[Kubernetes pods]] are first class citizens on your network and able to communicate with any other workload on your network.</pre>
@@ -20134,8 +19741,7 @@ bash会[[fork]]再[[exec]]跑这个后台程序。
 &lt;/div&gt;</pre>
 </div>
 <div created="20200707081128876" modified="20200707081149402" tags="[[OS-level virtualization]]" title="Docker">
-<pre>
-Docker is a set of platform as a service (PaaS) products that uses [[OS-level virtualization]] to deliver software in packages called containers.</pre>
+<pre>Docker is a set of platform as a service (PaaS) products that uses [[OS-level virtualization]] to deliver software in packages called containers.</pre>
 </div>
 <div created="20200708153944529" modified="20200708153944529" title="dup2">
 <pre></pre>
@@ -20973,8 +20579,7 @@ Process 8572 detached
 <pre></pre>
 </div>
 <div created="20200707080520100" modified="20200707080630741" tags="OS" title="OS-level virtualization">
-<pre>
-OS-level virtualization refers to an [[OS]] paradigm in which the kernel allows the existence of multiple isolated user space instances.
+<pre>OS-level virtualization refers to an [[OS]] paradigm in which the kernel allows the existence of multiple isolated user space instances.
 
 On Unix-like operating systems, this feature can be seen as an advanced implementation of the standard chroot mechanism, which changes the apparent root folder for the current running process and its children. In addition to isolation mechanisms, the kernel often provides resource-management features to limit the impact of one container's activities on other containers.</pre>
 </div>
