--- a/wiki/index.html
+++ b/wiki/index.html
@@ -591,6 +591,10 @@ Error message and password prompt
 
 <li>$:/state/toc/Linux-Signal-1152169851</li>
 
+<li>$:/state/toc/Network-NetworkProtocol-158653383</li>
+
+<li>$:/state/toc/Network-NetworkVirtualization-158653383</li>
+
 <li>$:/state/toc/Programming language-Golang--890961047</li>
 
 <li>$:/state/toc/Programming language-Programming language theory--890961047</li>
@@ -1153,6 +1157,8 @@ Error message and password prompt
 
 <li>Literature</li>
 
+<li>Loopback Interface</li>
+
 <li>lsof</li>
 
 <li>Make</li>
@@ -1170,6 +1176,8 @@ Error message and password prompt
 <li>netstat</li>
 
 <li>Network</li>
+
+<li>Network Interfaces</li>
 
 <li>NetworkProtocol</li>
 
@@ -17978,6 +17986,12 @@ exports.context = contextWidget;
 <div created="20200626110558550" modified="20200628060156990" title="$:/state/toc/Linux-Signal-1152169851">
 <pre>close</pre>
 </div>
+<div created="20200716061145675" modified="20200716061145675" title="$:/state/toc/Network-NetworkProtocol-158653383">
+<pre>open</pre>
+</div>
+<div created="20200716061149755" modified="20200716061149755" title="$:/state/toc/Network-NetworkVirtualization-158653383">
+<pre>open</pre>
+</div>
 <div created="20200629161553263" modified="20200629161553263" title="$:/state/toc/Programming language-Golang--890961047">
 <pre>open</pre>
 </div>
@@ -18167,7 +18181,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200713100933722" list="Calico [[Calico for Eru]]" modified="20200713163212376" title="$:/StoryList">
+<div created="20200713100933722" list="Network [[Network Interfaces]] [[Loopback Interface]] [[Eru 超售(Oversold)]] Calico [[Calico for Eru]]" modified="20200716061114953" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19216,14 +19230,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200713100932898" title="$:/temp/search">
-<pre></pre>
+<div created="20200418122544376" modified="20200716061111424" title="$:/temp/search">
+<pre>Network</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200702123639422" modified="20200713070944520" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Calico for Eru</pre>
+<div created="20200702123639422" modified="20200716061151233" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>NetworkVirtualization</pre>
 </div>
 <div created="20200629161500897" modified="20200629161500897" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>Literature</pre>
@@ -20417,6 +20431,18 @@ At this point, the shell (bash), find, wc, sort, and uniq are all running.
 <div created="20200627161418593" modified="20200627161500323" tags="[[Liberal arts]]" title="Literature">
 <pre>[[Liberal arts]]</pre>
 </div>
+<div created="20200716061214444" modified="20200716061309534" tags="[[Network Interfaces]]" title="Loopback Interface">
+<pre>[[Network Interfaces]]
+
+&lt;&lt;&lt;.tc-big-quote
+The Internet Protocol (IP) specifies a loopback network with the (IPv4) address 127.0.0.0/8. 
+
+Most IP implementations support a loopback interface (lo0) to represent the loopback facility. 
+
+Any traffic that a computer program sends on the loopback network is addressed to the same computer.
+
+The most commonly used IP address on the loopback network is 127.0.0.1 for IPv4 and ::1 for IPv6. The standard domain name for the address is localhost.</pre>
+</div>
 <div created="20200628054351273" modified="20200628054351273" title="lsof">
 <pre></pre>
 </div>
@@ -20548,8 +20574,15 @@ Process 8572 detached
 <div created="20200628054351269" modified="20200628054351269" title="netstat">
 <pre></pre>
 </div>
-<div created="20200625051548724" modified="20200625051603907" tags="Development" title="Network" type="text/x-markdown">
-<pre></pre>
+<div created="20200625051548724" modified="20200716061143389" tags="Development" title="Network" type="">
+<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'Network' sort[ind]&gt;&gt;
+
+&lt;/div&gt;</pre>
+</div>
+<div created="20200716061152429" modified="20200716061212332" tags="Network" title="Network Interfaces">
+<pre>[[Network]]</pre>
 </div>
 <div created="20200707105654455" modified="20200707105708862" tags="Network" title="NetworkProtocol">
 <pre>[[Network]]</pre>
