--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1021,7 +1021,7 @@ Error message and password prompt
 
 <li>cgroups + OOM</li>
 
-<li>Chinese  literature</li>
+<li>Chinese literature</li>
 
 <li>ci</li>
 
@@ -1236,8 +1236,6 @@ Error message and password prompt
 <li>PCRE</li>
 
 <li>Pitfalls</li>
-
-<li>Poem</li>
 
 <li>Poems</li>
 
@@ -18399,8 +18397,8 @@ exports.context = contextWidget;
 <div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200418121835270" modified="20200717140057023" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20200418121835270" modified="20200719122627062" title="$:/state/tab/sidebar--595412856">
+<pre>TableOfContents</pre>
 </div>
 <div created="20200504200956301" modified="20200628155701482" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -18579,7 +18577,7 @@ exports.context = contextWidget;
 <div created="20200702170821655" modified="20200702170821655" title="$:/state/toc/TableOfContents/Development/OS/Linux/Process-wait &amp;&amp; waitpid--118161433">
 <pre>open</pre>
 </div>
-<div created="20200627161537894" modified="20200629161513064" title="$:/state/toc/TableOfContents/Liberal arts-Literature--118161433">
+<div created="20200627161537894" modified="20200719122904252" title="$:/state/toc/TableOfContents/Liberal arts-Literature--118161433">
 <pre>open</pre>
 </div>
 <div created="20200717070037510" modified="20200717070037510" title="$:/state/toc/TableOfContents/Management-Project Management--118161433">
@@ -18633,7 +18631,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200713100933722" list="[[is all program exit cause by signal?]] golang Golang [[cocurrent write need to ensure share var operation are atomic]] [[Linux Trace Tools]] [[ltrace - A library call tracer]] 当程序变现很奇怪，不该变的地方变了 [[Eru 超售(Oversold)]] Debug File&amp;IO [[Linux File System]] procfs [[Use proc's fd to recover files]] [[goalng CI build 二进制/tmp/zero-redis: No such file or directory]] [[linux process clone api]] Process Tips [[Environment variables]] JobControl WhyBashCanRunProgram Strace [[extended Berkeley Packet Filter (eBPF or BPF)]]" modified="20200718164354078" title="$:/StoryList">
+<div created="20200713100933722" list="宋代卢祖皋的《江城子·画楼帘幕卷新晴》 听雨 Poems [[Chinese literature]] Literature" modified="20200719122858124" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19682,20 +19680,20 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200718164344720" title="$:/temp/search">
-<pre>golang </pre>
+<div created="20200418122544376" modified="20200719122856042" title="$:/temp/search">
+<pre>江城子·画楼帘幕卷新晴</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200702123639422" modified="20200718164353970" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>is all program exit cause by signal?</pre>
+<div created="20200702123639422" modified="20200719122840704" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>宋代卢祖皋的《江城子·画楼帘幕卷新晴》</pre>
 </div>
 <div created="20200629161500897" modified="20200629161500897" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>Literature</pre>
 </div>
-<div created="20200704181754913" modified="20200705075650728" title="$:/temp/toc/selectedTiddler">
-<pre>Tiddly Wiki Experience</pre>
+<div created="20200704181754913" modified="20200719122845471" title="$:/temp/toc/selectedTiddler">
+<pre>宋代卢祖皋的《江城子·画楼帘幕卷新晴》</pre>
 </div>
 <div bag="default" created="20200414145220556" modified="20200616183714956" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
 <pre>$:/themes/tiddlywiki/seamless</pre>
@@ -20148,7 +20146,7 @@ contains a flag (0 or 1) that enables or disables the Out of Memory killer for a
 
 docker在设置cgroup时设置oom control的，kernel来杀OOM的进程。</pre>
 </div>
-<div created="20200627161505732" modified="20200627161536435" tags="Literature" title="Chinese  literature">
+<div created="20200627161505732" modified="20200719122915891" tags="Literature" title="Chinese literature">
 <pre>[[Literature]]</pre>
 </div>
 <div created="20200626173132425" modified="20200626173132425" title="ci">
@@ -21275,11 +21273,16 @@ On Unix-like operating systems, this feature can be seen as an advanced implemen
 <div created="20200622162527707" modified="20200622162527707" title="Pitfalls">
 <pre></pre>
 </div>
-<div created="20200706155751200" modified="20200706155804457" tags="[[Chinese Literature]]" title="Poem">
-<pre>[[Chinese  literature]]</pre>
-</div>
-<div created="20200627161540955" modified="20200627161553383" tags="[[Chinese Literature]]" title="Poems">
-<pre>[[Chinese  literature]]</pre>
+<div created="20200627161540955" modified="20200719122915895" tags="[[Chinese literature]]" title="Poems">
+<pre>[[Chinese literature]]
+
+&lt;$macrocall
+	$name=&quot;toc-tabbed-internal-nav&quot;
+	tag=&quot;Poems&quot;
+	selectedTiddler=&quot;$:/temp/toc/selectedTiddler&quot;
+	unselectedText=&quot;&lt;p&gt;Select a topic in the table of contents. Click the arrow to expand a topic.&lt;/p&gt;&quot;
+	missingText=&quot;&lt;p&gt;Missing tiddler.&lt;/p&gt;&quot;
+/&gt;</pre>
 </div>
 <div created="20200626104134628" modified="20200712143903367" tags="[[Regular expression]]" title="Positive lookbehind" type="text/x-markdown">
 <pre>`(?&lt;=regex)`
@@ -22194,7 +22197,7 @@ this is a text, to be deleted
 - in [imperative programming](https://www.wikiwand.com/en/Imperative_programming), a [subroutine](https://www.wikiwand.com/en/Subroutine) with [side effects](https://www.wikiwand.com/en/Side_effect_(computer_science)) is idempotent if the system state remains the same after one or several calls, in other words if the function from the system state space to itself associated to the subroutine is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition);
 - in [functional programming](https://www.wikiwand.com/en/Functional_programming), a [pure function](https://www.wikiwand.com/en/Pure_function) is idempotent if it is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition).</pre>
 </div>
-<div created="20200623022055541" modified="20200627161619420" tags="Poems" title="听雨" type="text/x-markdown">
+<div created="20200623022055541" modified="20200719122731795" tags="Poems" title="听雨" type="text/x-markdown">
 <pre>```
 《菩萨蛮·人人尽说江南好》
 韦庄 
