--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1345,8 +1345,6 @@ Error message and password prompt
 
 <li>SystemProgramming</li>
 
-<li>SystemTap</li>
-
 <li>TableOfContents</li>
 
 <li>thanos</li>
@@ -18407,8 +18405,8 @@ exports.context = contextWidget;
 <div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200418121835270" modified="20200719122627062" title="$:/state/tab/sidebar--595412856">
-<pre>TableOfContents</pre>
+<div created="20200418121835270" modified="20200719161926021" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20200504200956301" modified="20200628155701482" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -18647,7 +18645,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200713100933722" list="Poems 虞美人·听雨 宋代卢祖皋的《江城子·画楼帘幕卷新晴》 菩萨蛮·人人尽说江南好 [[Chinese literature]] Literature" modified="20200719153751738" title="$:/StoryList">
+<div created="20200713100933722" list="[[ltrace - A library call tracer]]" modified="20200719161940940" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19708,8 +19706,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200629161500897" modified="20200629161500897" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>Literature</pre>
 </div>
-<div created="20200704181754913" modified="20200719122845471" title="$:/temp/toc/selectedTiddler">
-<pre>宋代卢祖皋的《江城子·画楼帘幕卷新晴》</pre>
+<div created="20200704181754913" modified="20200719153927521" title="$:/temp/toc/selectedTiddler">
+<pre>虞美人·听雨</pre>
 </div>
 <div bag="default" created="20200414145220556" modified="20200616183714956" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
 <pre>$:/themes/tiddlywiki/seamless</pre>
@@ -21922,9 +21920,6 @@ A system call is a controlled entry point into the kernel, allowing a process to
 &lt;&lt;toc-selective-expandable 'SystemProgramming' sort[ind]&gt;&gt;
 
 &lt;/div&gt;</pre>
-</div>
-<div created="20200718153027254" modified="20200718153027254" title="SystemTap">
-<pre></pre>
 </div>
 <div caption="{{$:/language/SideBar/Contents/Caption}}" created="20200623164931845" list-before="$:/core/ui/SideBar/Open" modified="20200704182420316" tags="$:/tags/SideBar" title="TableOfContents" type="">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
